--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,13 +53,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\arrow.cs" />
      <Compile Include="Assets\LateralWall.cs" />
      <Compile Include="Assets\Move.cs" />
      <Compile Include="Assets\Objects\Bubble.cs" />
      <Compile Include="Assets\Objects\Line.cs" />
      <Compile Include="Assets\Party.cs" />
+     <Compile Include="Assets\RotatingCursor\Scripts\RotatingCursor.cs" />
      <Compile Include="Assets\shooter.cs" />
      <Compile Include="Assets\TopWall.cs" />
+     <None Include="Assets\RotatingCursor\readme.txt" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/home/acuevas/Téléchargements/EpiBubble/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
